+ ThemeIcon options ! reloadFavIcons() - change to simple set value (without request) ! isSpecialUrl() --> _isSpecialUrl() in f.js

--- a/options/options.html
+++ b/options/options.html
@@ -172,7 +172,23 @@
 
         </div>
         <div id="iconsPanel">
-
+          <fieldset id="fsBrowseActionIcons">
+          <legend>!Использовать</legend>
+            <div class="radioContainer">
+              <ul>
+                <li>
+                  <input type="radio" id="iconLight" name="ThemeIcon"  value="light">
+                  <label id="iconLightLbl" for="iconLight"></label>
+                  <div class="check"></div>
+                </li>
+                <li>
+                  <input type="radio" id="iconDark" name="ThemeIcon" checked="checked" value="dark">
+                  <label id="iconDarkLbl" for="iconDark"></label>
+                  <div class="check"></div>
+                </li>
+              </ul>
+            </div>
+          </fieldset>
         </div>
       </div>
       <div id="buttons">
