--- a/options/options.html
+++ b/options/options.html
@@ -155,8 +155,15 @@
               </label>
               <label for="enableFilterByNotes">enableFilterByNotes:</label>
             </div>
+            <div class="fRow">
+              <label class="switch">
+                <input id="enableLableFilter" type="checkbox">
+                <div class="slider round"></div>
+              </label>
+              <label for="enableLableFilter">enableLableFilter:</label>
+            </div>
             <div class="fRow alignRow50">
-              <label for="filterDelay">enableLabelUnlabeled:</label>
+              <label for="filterDelay">filterDelay:</label>
               <input type="text" name="filterDelay" id="filterDelay" size="3" pattern='[0-9]{1,3}'>
             </div>
           </fieldset>
