+enableTreePersisitData - save tree state (expanded labels, acive label)

--- a/options/options.html
+++ b/options/options.html
@@ -116,6 +116,13 @@
             <label for="timeout">timeout:</label>
             <input type="text" id="timeout" name="timeout" pattern="[0-9]{1,5}" >
           </div>
+          <div class="fRow">
+            <label class="switch">
+              <input id="enableTreePersisitData" type="checkbox">
+              <div class="slider round"></div>
+            </label>
+            <label for="enableTreePersisitData" title="Remember Expanded Labels">enableTreePersisitData</label>
+          </div>
         </div>
         <div id="advPanel">
           <div class="fRow alignRow50">
