--- a/options/options.html
+++ b/options/options.html
@@ -123,6 +123,25 @@
             </label>
             <label for="enableTreePersisitData" title="Remember Expanded Labels">enableTreePersisitData</label>
           </div>
+          <div class="fRow">
+            <fieldset id="options_fsOpenContextIn_legend">
+            <legend>!Использовать</legend>
+              <div class="radioContainer">
+                <ul>
+                  <li>
+                    <input type="radio" id="options_OpenContextIn_popup" name="options_lblOpenContextIn" checked="checked" value="popup">
+                    <label id="options_lblOpenContextIn_popup" for="options_OpenContextIn_popup"></label>
+                    <div class="check"></div>
+                  </li>
+                  <li>
+                    <input type="radio" id="options_OpenContextIn_sidebar" name="options_lblOpenContextIn" value="sidebar">
+                    <label id="options_lblOpenContextIn_sidebar" for="options_OpenContextIn_sidebar"></label>
+                    <div class="check"></div>
+                  </li>
+                </ul>
+              </div>
+            </fieldset>
+          </div>
         </div>
         <div id="advPanel">
           <div class="fRow alignRow50">
