--- a/sidebar/sidebar.html
+++ b/sidebar/sidebar.html
@@ -23,15 +23,15 @@
       <nav id="hmenu">
         <ul class="nav-bar">
           <li class="hmenuRefresh"><a class="hmenuBtn" href="#"></a></li>
-          <li class="hmenuEmpty"><a></a></li>
+ <!--          <li class="hmenuEmpty"><a></a></li> -->
           <li class="hmenuReadLater"><a class="hmenuBtn" href="#"></a></li>
-          <li class="hmenuEmpty"><a></a></li>
+          <!-- <li class="hmenuEmpty"><a></a></li> -->
           <li class="hmenuAdd"><a class="hmenuBtn" href="#"></a></li>
           <li class="hmenuEdit"><a class="hmenuBtn" href="#"></a></li>
           <li class="hmenuDel"><a class="hmenuBtn" href="#"></a></li>
-          <li class="hmenuEmpty"><a></a></li>
+          <!-- <li class="hmenuEmpty"><a></a></li> -->
           <li class="hmenuAddOpenTabs"><a class="hmenuBtn" href="#"></a></li>
-          <li class="hmenuEmpty"><a></a></li>
+          <!-- <li class="hmenuEmpty"><a></a></li> -->
           <li class="hmenuOpt"><a class="hmenuBtn" href="#"></a></li>
           <li class="hmenuGBs"><a class="hmenuBtn" href="#"></a></li>
           <!-- <li class="hmenuFFbookmark"><a href="#"></a></li> -->
@@ -40,7 +40,7 @@
           <li class="hmenuLgt"><a class="hmenuBtn" href="#"></a></li>
         </ul>
       </nav>
-      <div class="filterHBox">
+      <div id="filterHBox" class="filterHBox">
           <label for="filterTextbox">Search: </label>
           <span class="first">
             <input type="text" name="filterTextbox" id="filterTextbox" value=""  placeholder="" tabindex="1"/>
@@ -50,7 +50,7 @@
           </span>
           <!-- <div class="filterHBox-clear"><a class="clrBtn" disabled="true"></a></div> -->
       </div>
-      <hr>
+<!--       <hr> -->
 <!--       </div> -->
       <div class="info-box">
         <div><img src="../images/ajax-loader.gif"></div>
