--- a/options/options.html
+++ b/options/options.html
@@ -186,6 +186,13 @@
               </label>
               <label for="enableLableFilter">enableLableFilter:</label>
             </div>
+            <div class="fRow">
+              <label class="switch">
+                <input id="enableMultipleLabelFilter" type="checkbox">
+                <div class="slider round"></div>
+              </label>
+              <label for="enableMultipleLabelFilter">enableMultipleLabelFilter:</label>
+            </div>
             <div class="fRow alignRow50">
               <label for="filterDelay">filterDelay:</label>
               <input type="text" name="filterDelay" id="filterDelay" size="3" pattern='[0-9]{1,3}'>
